--- a/MDNtest/style1.css
+++ b/MDNtest/style1.css
@@ -1,2 +1,5 @@
-p {color: blue; }
-strong{color: red;text-decoration: underline;}
+strong { color: red; }
+.carrot { color: orange; }
+.spinach { color: green; }
+#first { font-style: italic; }
+#second{color:blue;}
