--- a/MDNtest/style1.css
+++ b/MDNtest/style1.css
@@ -1,5 +1,5 @@
-strong { color: red; }
-.carrot { color: orange; }
-.spinach { color: green; }
-#first { font-style: italic; }
-#second{color:blue;}
+strong {color: red;}
+/*.carrot {color: orange;}*/
+.spinach {color: green;}
+#first {font-style: italic;}
+p {color: blue;}
