--- a/MDNtest/style2.css
+++ b/MDNtest/style2.css
@@ -1,13 +1,25 @@
 /* numbered paragraphs */
-h3.numbered {counter-reset: mynum;}
+h3.numbered {
+  counter-reset: mynum;
+}
  
 p.numbered:before {
   content: counter(mynum) ": ";
   counter-increment: mynum;
   font-weight: bold;
 }
-h3 {border-top: 1px solid gray;}
+
+h3 {
+  border-top: 1px solid gray;
+}
+
 ul,#numbered {
   border: 1em solid #69b;
   padding-right:1em;
+}
+ul, #numbered {float: left;}
+h3 {clear: left;}
+h3 {
+  border-top: 1px solid gray;
+  text-align: center;
 }
